--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="section-title bg-white text-center px-3 color-oran">Cursos Populares</h6>
-                    <h1 class="custom-h2 mb-2 color-cafe">Clases de Baile | Salsa y Timba en Lima</h1>
+                    <h1 class="custom-h2 mb-2 color-cafe">Clases de Baile</h1>
                 </div>
                 <!-- list Courses Start -->
                 <div class="row g-4 justify-content-center">
