--- a/templates/courses/courses.html
+++ b/templates/courses/courses.html
@@ -11,7 +11,7 @@
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h2 class="section-title bg-white text-center px-3 color-oran custom-h6">{% if title %}{{ title }}{% endif %}</h2>
-                    <h1 class="custom-h2 mb-2 color-cafe">Clases de Baile | clases de salsa en Lima</h1>
+                    <h1 class="custom-h2 mb-2 color-cafe">Clases de Baile | Clases de Salsa en Lima</h1>
                 </div>
                 <div class="row g-4 justify-content-center">
 
