foto blog and contact

--- a/templates/content_site/privacy_policies.html
+++ b/templates/content_site/privacy_policies.html
@@ -48,7 +48,7 @@
                     </ul>
                 
                     <h3>5. Derechos de los Usuarios</h3>
-                    <p>Tienes derecho a acceder, rectificar y cancelar tus datos personales. Para ejercer estos derechos, contacta a <strong>cubangroove@gmail.com</strong>.</p>
+                    <p>Tienes derecho a acceder, rectificar y cancelar tus datos personales. Para ejercer estos derechos, contacta a <strong>cubangroove.pe@gmail.com</strong>.</p>
                 
                     <h3>6. Uso de Cookies y Tecnologías Similares</h3>
                     <p>El sitio web utiliza cookies para mejorar la navegación y analizar el uso del sitio. Puedes configurar tu navegador para bloquear cookies, aunque esto podría afectar la funcionalidad del sitio.</p>
@@ -57,7 +57,7 @@
                     <p>Cuban Groove puede modificar esta política en cualquier momento. Cualquier cambio se publicará en esta página, y recomendamos revisar periódicamente nuestra política.</p>
 
                     <h3>8. Contacto</h3>
-                    <p>Para preguntas sobre nuestra política de privacidad, contacta a <strong>cubangroove@gmail.com</strong>.</p>
+                    <p>Para preguntas sobre nuestra política de privacidad, contacta a <strong>cubangroove.pe@gmail.com</strong>.</p>
 
                 </section>
             </div>
