--- a/templates/content_site/contact.html
+++ b/templates/content_site/contact.html
@@ -57,7 +57,7 @@
                         </div>
                         <div class="ms-3">
                             <h5 class="color-oran">Envíanos un Email</h5>
-                            <p class="mb-0">cubangroove@gmail.com</p>
+                            <p class="mb-0">cubangroove.pe@gmail.com</p>
                         </div>
                     </div>
                 </div>
