--- a/templates/_base.html
+++ b/templates/_base.html
@@ -146,7 +146,7 @@
         <!-- Banner Start -->
         <div class="banner-top text-center">
             <a id="btn_home_pr_contact" href="{% url 'courses_group' %}" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                <img src="{% static 'img/promo/promo_desk.png' %}" alt="Promociones de fin de año" class="img-fluid" style="width: 100%; height: auto;">
+                <img id="btn_home_pr_contact" src="{% static 'img/promo/promo_desk.png' %}" alt="Promociones de fin de año" class="img-fluid" style="width: 100%; height: auto;">
             </a>
         </div>
         <!-- Banner End -->
