--- a/templates/_base.html
+++ b/templates/_base.html
@@ -14,13 +14,14 @@
 
     
     <meta charset="utf-8">
-    <title>{% block title %}Cuban Groove | Clases de Baile{% endblock title %}</title>
+    <title>{% block title %}Salsa y timba | Mejora tu estilo | Curso de baile{% endblock title %}</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <!-- Meta Keywords -->
     <meta name="keywords" content="Clases de Salsa, Clases de Salsa en Lima, Clases de Salsa en Miraflores, Clases de Salsa en Surco, Clases de Salsa en San Isidro, Clases de Salsa en Lince, Clases de Baile, Clases de Baile en Miraflores, Clases de Baile en Surco, Clases de Baile en San Isidro, Clases de Baile en Lince, Academia de Baile en Surco, Academia de Baile en San Isidro, Academia de Baile en Lince, Academia de Baile en La Victoria, Escuela de Baile en Lima, Ritmos Cubanos, Danza Latina, Timba Cubana, Salsa Cubana">
 
     <!-- Meta Description -->
-    <meta name="description" content="Aprende Salsa y Baile en Lima con Cuban Groove. Ofrecemos clases en Miraflores, Surco, San Isidro y Lince. Descubre ritmos cubanos como salsa cubana, reparto y rumba. ¡Transforma tu estilo de baile con nosotros!">
+    <meta name="description" content="Te asesoramos en cursos de baile de salsa y timba cubana. Aprende el estilo y destaca tu baile en Lima. ¡Descubre más aquí!">
+
     <meta name="author" content="Cuban Groove">
     <meta name="robots" content="index, follow">
 
@@ -145,7 +146,7 @@
       <!-- Navbar End -->
         <!-- Banner Start -->
         <div class="banner-top text-center">
-            <a id="btn_home_pr_contact" href="{% url 'courses_group' %}" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <a id="btn_home_pr_contact_a" href="{% url 'courses_group' %}" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 <img id="btn_home_pr_contact" src="{% static 'img/promo/promo_desk.png' %}" alt="Promociones de fin de año" class="img-fluid" style="width: 100%; height: auto;">
             </a>
         </div>
