--- a/templates/content_site/thankyou.html
+++ b/templates/content_site/thankyou.html
@@ -1,55 +1,45 @@
 {% extends '_base.html' %}
 {% load static %}
-{% block title %}Luxe Cordonado | Cuban Groove | Clases de Baile{% endblock title %}
-
+{% block title %}Contacto | Cuban Groove | Clases de Baile{% endblock title %}
 
 {% block content %}
 
-    {% if instructor.about_me %}
-        <!-- About Start -->
-        <div class="container-xxl py-5">
-            <div class="container">
-
-                <div class="row g-5">
-                    <div class="row g-4 justify-content-center">
-                        <div class="col" style="text-align: left;">
-                            <p style="margin-bottom: -10px;"><h1 class="color-oran">{{ instructor.name }}</h1></p>
-                        </div>
-                        {{instructor.about_me | safe }}
-                        <div class="row gy-2 gx-4 mb-0">
-                            {% for tag in tags_about_me %}
-                                <div class="col-sm-6">
-                                    <p class="mb-0"><i class="fa fa-arrow-right color-oran me-2"></i>{{ tag }}</p>
-                                </div>
-                            {% endfor %}
-                        </div>
-                    </div>
-                </div>
+    <!-- Contact Start -->
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
+                <h6 class="section-title bg-white text-center px-3 color-oran">¡Estás cada vez más cerca!</h6>
+                <h2 class="mb-5 color-cafe">Hemos enviado tus datos y te contactarán a la brevedad.</h2>
             </div>
+            <!-- Botón para contactar a un asesor -->
+            <div class="mb-4">
+                <a href="https://wa.me/51991337159" target="_blank" class="btn btn-primary btn-lg">
+                    <i class="fab fa-whatsapp"></i> Contactar un asesor
+                </a>
+            </div>
+            
         </div>
-        <!-- About End -->
-    {% endif %}
-
-    {% if instructor.course %}
+    </div>
+    <!-- Contact End -->
+    {% if list_course_you_might_like %}
     <!-- Courses might Like -->
         <div class="container-xxl mb-5">
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="section-title bg-white text-center px-3 color-oran">Mis Cursos</h6>
-                    <h2 class="mb-5 color-cafe">¡Aprende a Bailar con la Mejor Metodologia!</h2>
-                    <p>Descubre en Cuban Groove el curso de baile que se adapta a ti. Aprende salsa, timba cubana y perfecciona tu estilo. ¡Comienza hoy a transformar tu pasión por el baile!</p>
+                    <h6 class="section-title bg-white text-center px-3 color-oran">Otros cursos similares</h6>
+                    <h2 class="custom-h2 mb-2 color-cafe">¡Encuentra tu Curso Perfecto!</h2>
                 </div>
                 
                 <!-- list Courses Start -->
                 <div class="row g-4 justify-content-center">
-                    {% for course in instructor.course.all %}
+                    {% for course in list_course_you_might_like %}
                         <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="course-item bg-light">
                                 <div class="position-relative overflow-hidden d-flex align-items-center">
                                     <img class="img-fluid" src="{{ course.image.url }}" alt="{{ course.title }} - Curso de Baile en Cuban Groove">
                                     <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
-                                        <a href="{% url 'courses_detail' course.slug %}" id="btn_ourtea_cards_read" class="flex-shrink-0 btn btn-sm btn-warning px-3 border-end" style="border-radius: 30px 0 0 30px;">Leer Más</a>
-                                        <a href="#" class="flex-shrink-0 btn btn-sm btn-warning px-3" id="btn_ourtea_cards_contact" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-course="{{ course.title }}" style="border-radius: 0 30px 30px 0;">Obten un Descuento</a>
+                                        <a href="{% url 'courses_detail' course.slug %}" class="flex-shrink-0 btn btn-sm btn-warning px-3 border-end" style="border-radius: 30px 0 0 30px;">Leer Más</a>
+                                        <a href="#" class="flex-shrink-0 btn btn-sm btn-warning px-3" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-course="{{ course.title }}" style="border-radius: 0 30px 30px 0;">Obten un Descuento</a>
                                     </div>
                                     <div class="infoPrice">
                                         <strong>S/.{{ course.price }}</strong>
@@ -78,9 +68,5 @@
         </div>
     {% endif %}
     <!-- Courses might like End -->
-
     
 {% endblock content %}
-
-{% block javascript %}
-{% endblock javascript %}
