--- a/templates/courses/course_detail.html
+++ b/templates/courses/course_detail.html
@@ -151,9 +151,9 @@
                     <div class="row gy-2 gx-4 mb-4">
                         {% for feature in course.feature.all %}
                             <div class="col-sm-6">
-                                <h2 class="mb-0" style="font-size: 1rem; font-weight: 400; font-family: inherit; color: inherit;">
+                                <p class="mb-0" style="font-size: 1rem; font-weight: 400; font-family: inherit; color: inherit;">
                                     <i class="fa fa-arrow-right color-oran me-2"></i>{{ feature.description }}
-                                </h2>
+                                </p>
                             </div>
                         {% endfor %}
                     </div>
@@ -171,6 +171,7 @@
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="section-title bg-white text-center px-3 color-oran">Otros cursos similares</h6>
                     <h2 class="custom-h2 mb-2 color-cafe">¡Encuentra tu Curso Perfecto!</h2>
+                    <p>Cuban Groove te invita a vivir una experiencia única de baile. Aprende salsa, timba cubana y descubre tu estilo personal con nuestros cursos. ¡Inscríbete ya!</p>
                 </div>
                 
                 <!-- list Courses Start -->
