--- a/templates/courses/courses.html
+++ b/templates/courses/courses.html
@@ -12,6 +12,8 @@
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h2 class="section-title bg-white text-center px-3 color-oran custom-h6">{% if title %}{{ title }}{% endif %}</h2>
                     <h1 class="custom-h2 mb-2 color-cafe">Clases de Baile | Clases de Salsa en Lima</h1>
+                    <p>En Cuban Groove te ayudamos a encontrar el curso de baile perfecto para ti. Aprende salsa, timba cubana y domina un estilo auténtico. ¡Únete a nuestras clases y transforma tu forma de bailar hoy mismo!</p>
+
                 </div>
                 <div class="row g-4 justify-content-center">
 
@@ -22,7 +24,7 @@
                                     <img class="img-fluid" src="{{ course.image.url }}" alt="{{ course.title }} - Curso de Baile en Cuban Groove">
                                     <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
                                         <a href="{% url 'courses_detail' course.slug %}" class="flex-shrink-0 btn btn-sm btn-warning px-3 border-end" style="border-radius: 30px 0 0 30px;">Leer Más</a>
-                                        <a href="#" class="flex-shrink-0 btn btn-sm btn-warning px-3" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-course="{{ course.title }}" style="border-radius: 0 30px 30px 0;">Obten un Descuento</a>
+                                        <a href="#" class="flex-shrink-0 btn btn-sm btn-warning px-3" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-course="{{ course.title }}" style="border-radius: 0 30px 30px 0;">Contactar</a>
                                     </div>
                                     <div class="infoPrice">
                                         <strong>S/.{{ course.price }}</strong>
