--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
             <div class="owl-carousel header-carousel position-relative">
                 {% for course in list_course_banner_top %}
                     <div class="owl-carousel-item position-relative">
-                        <img class="img-fluid" src="{{ course.image_banner_top.url }}" alt="alt="Clases de Salsa en Lima"">
+                        <img class="img-fluid" src="{{ course.image_banner_top.url }}" alt="Curso destacado de baile en Lima">
                         <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(24, 29, 56, .7);">
                             <div class="container">
                                 <div class="row justify-content-start">
@@ -39,6 +39,8 @@
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="section-title bg-white text-center px-3 color-oran">Cursos Populares</h6>
                     <h1 class="custom-h2 mb-2 color-cafe">Clases de Baile</h1>
+                    <p>En Cuban Groove te asesoramos para encontrar el curso de baile ideal. Aprende salsa, timba cubana y destaca con un estilo único. ¡Descubre más sobre nuestros cursos y mejora tu técnica de baile hoy mismo!</p>
+
                 </div>
                 <!-- list Courses Start -->
                 <div class="row g-4 justify-content-center">
@@ -49,7 +51,7 @@
                                     <img class="img-fluid" src="{{ course.image.url }}" alt="{{ course.title }} - Curso de Baile en Cuban Groove">
                                     <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
                                         <a href="{% url 'courses_detail' course.slug %}" id="btn_home_popular_read" class="flex-shrink-0 btn btn-sm btn-warning px-3 border-end" style="border-radius: 30px 0 0 30px;">Leer Más</a>
-                                        <a href="#" class="flex-shrink-0 btn btn-sm btn-warning px-3" id="btn_home_popular_contact" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-course="{{ course.title }}" style="border-radius: 0 30px 30px 0;">Obten un Descuento</a>
+                                        <a href="#" class="flex-shrink-0 btn btn-sm btn-warning px-3" id="btn_home_popular_contact" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-course="{{ course.title }}" style="border-radius: 0 30px 30px 0;">Contactar</a>
                                     </div>
                                     <div class="infoPrice">
                                         <strong>S/.{{ course.price }}</strong>
