--- a/templates/_base.html
+++ b/templates/_base.html
@@ -12,7 +12,13 @@
     <!-- End Google Tag Manager -->
 
 
-    
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "po9nb5gcah");
+    </script>
     <meta charset="utf-8">
     <title>{% block title %}Salsa y timba | Mejora tu estilo | Curso de baile{% endblock title %}</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
