--- a/templates/_base.html
+++ b/templates/_base.html
@@ -150,13 +150,15 @@
           </div>
       </nav>
       <!-- Navbar End -->
-        <!-- Banner Start -->
-        <div class="banner-top text-center">
-            <a id="btn_home_pr_contact_a" href="{% url 'courses_group' %}" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                <img id="btn_home_pr_contact" src="{% static 'img/promo/promo_desk.png' %}" alt="Promociones de fin de año" class="img-fluid" style="width: 100%; height: auto;">
-            </a>
-        </div>
-        <!-- Banner End -->
+        {% if not 'courses-group' in request.path %}
+            <!-- Banner Start -->
+            <div class="banner-top text-center">
+                <a id="btn_home_pr_contact_a" href="{% url 'courses_group' %}">
+                    <img id="btn_home_pr_contact" src="{% static 'img/promo/promo_desk.png' %}" alt="Promociones de fin de año" class="img-fluid" style="width: 100%; height: auto;">
+                </a>
+            </div>
+            <!-- Banner End -->
+        {% endif %}
       {% block content %}
       {% endblock content %}
 
